--- a/src/components/assets/css/main.css
+++ b/src/components/assets/css/main.css
@@ -11,6 +11,30 @@
 .main-form {
     display: flex;
     flex-direction: column;
+
+}
+input {
+    border-radius: 25px;
+    border: 3px solid #60ACA5;
+    height: 30px;
+    width: 220px;
+    margin: 10px 0 15px 0;
+    padding: 8px 8px;
+    
+}
+
+::placeholder:focus{
+    color: red;
+}
+
+input:focus {
+    border-radius: 25px;
+    border: 3px solid #707070;
+    
+}
+
+*:focus {
+    outline: none;
 }
 
 .main-content {
