--- a/src/components/assets/css/style.css
+++ b/src/components/assets/css/style.css
@@ -25,9 +25,6 @@
     padding-left: 120px;
 }
 
-h2 {
-    color: #7c7c7c;
-}
 
 .welcome-btn {
     /* margin: auto; */
@@ -62,5 +59,11 @@ button:hover {
 
 h1, h2, p {
     font-family: Helvetica, Arial;
+    color: #7c7c7c;
+}
+
+h1 {
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 
