--- a/src/components/assets/css/home.css
+++ b/src/components/assets/css/home.css
@@ -10,7 +10,10 @@
 .home-content, .charts {
     border-radius: 20px;
     background-color: #ededed;
+    font-family: Helvetica, Arial;
+    color: #7c7c7c;
 }
+
 
 .nested {
     display: grid;
@@ -18,7 +21,29 @@
     gap: 2em;
 }
 
+.container {
+    display: flex;
+    align-content: center;
+
+
+}
+
 .charts {
     grid-column: 1/3;
-    border: 3px solid red;
+    /* border: 3px solid red; */
 }
+
+.arrow {
+    width: 0; 
+    height: 0; 
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid #707070;
+    display: inline-block;
+    margin-left: 120px;
+    
+  }
+
+  .home-content, .charts {
+      padding: 8px;
+  }
