--- a/src/components/assets/css/style.css
+++ b/src/components/assets/css/style.css
@@ -3,15 +3,13 @@
     padding: 0;
 }
 
-.header {
+header {
     background-color: #ededed;
     width: 100%;
     height: 136px;
     display: flex;
     align-items: center;
 }
-
-
 
 .main-nav {
     display: flex;
@@ -33,7 +31,7 @@
     margin-top: 15px;
 }
 
-button {
+.main-btn {
     text-align: center !important;
     background-color: #32B2A7;
     border: none;
@@ -51,7 +49,7 @@ button {
    
 }
 
-button:hover {
+.main-btn:hover {
     background-color: #fff;
     border: 2px solid #32b2a7;
     color: #32B2A7;
