--- a/src/components/assets/css/mainnav.css
+++ b/src/components/assets/css/mainnav.css
@@ -3,3 +3,29 @@ nav {
     width: 120px;
     height: 100vh;
 }
+
+ul {
+    display: flex;
+    flex-direction: column;
+    /* width: 100%;
+    height: 100%; */
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+li:active {
+    background-color: #fff;
+}
+
+li {
+    background-color: #fff;
+    margin-bottom: 60% !important;
+    width: 50%;
+    height: 100%;
+    /* height: 120px; */
+}
+
+.nav-icon {
+    width: 60px;
+    height: auto;
+}
