--- a/src/components/assets/css/home.css
+++ b/src/components/assets/css/home.css
@@ -1,4 +1,4 @@
-.home-wrapper {
+/* .home-wrapper {
     display: grid;
     
     height: 300px;
@@ -47,3 +47,4 @@
   .home-content, .charts {
       padding: 6px;
   }
+*/
