--- a/src/components/assets/css/mainnav.css
+++ b/src/components/assets/css/mainnav.css
@@ -1,14 +1,13 @@
-nav {
+/* nav {
     background-color: #ededed;
-    width: 120px;
-    height: 100vh;
+    
 }
 
 ul {
     display: flex;
     flex-direction: column;
     /* width: 100%;
-    height: 100%; */
+    height: 100%; 
     justify-content: center;
     align-items: center;
     list-style: none;
@@ -22,10 +21,10 @@ li {
     margin-bottom: 60% !important;
     width: 50%;
     height: 100%;
-    /* height: 120px; */
+    /* height: 120px; 
 }
 
 .nav-icon {
     width: 60px;
     height: auto;
-}
+} */
