--- a/src/components/assets/css/home.css
+++ b/src/components/assets/css/home.css
@@ -1,4 +1,4 @@
-.home-wrapper {
+/* .home-wrapper {
     display: grid;
     
     height: 300px;
@@ -30,7 +30,7 @@
 
 .charts {
     grid-column: 1/3;
-    /* border: 3px solid red; */
+    
 }
 
 .arrow {
@@ -45,5 +45,6 @@
   }
 
   .home-content, .charts {
-      padding: 8px;
+      padding: 6px;
   }
+*/
