--- a/src/components/assets/css/main.css
+++ b/src/components/assets/css/main.css
@@ -1,3 +1,4 @@
+/* 
 .app-logo {
     width: 420px;
     height: auto;
@@ -25,7 +26,11 @@
 
 /* ::placeholder:focus{
     color: red;
-} */
+} 
+
+*/
+
+/*
 
 .main-form > input:focus {
     border-radius: 25px;
@@ -38,7 +43,7 @@
 }
 
 .main-content {
-    /* display: none; */
+    /* display: none; 
 }
 
 .wrapper {
@@ -49,7 +54,7 @@
     background-position: bottom;
     background: cover;
     background-size: 120%;
-    /* margin-bottom: -300px; */
+    /* margin-bottom: -300px; 
 }
 
 .left, .right {
@@ -66,4 +71,33 @@
     bottom: 1px;
     left: 25px;
 }
+
+.transaction-btn {
+    border: none;
+    width: 20px;
+}  
+
+.transaction-listing {
+    flex-direction: column;
+    justify-content: space-between !important; */
+    /* flex-wrap: wrap; */
+    /* position: relative; */
+    /* width: 100%; 
+    display: table;
+}
+
+.tr {
+    display: table-row;
+    width: 260px !important;
+} 
+
+ .show-transactions {
+    display: table-cell;
+    border: 1px solid red;
+    /* position:absolute; */
+    /* padding: 6px 5px; 
+    width: 120px;
+    /* width: 100%; 
+} 
+*/
 
