--- a/src/components/assets/css/style.css
+++ b/src/components/assets/css/style.css
@@ -3,37 +3,150 @@
     padding: 0;
 }
 
-.header {
+.App {
+    display: grid !important;
+    height: 100vh;
+    grid-template-columns: .3fr 1fr 1fr .5fr;
+    grid-template-rows: .5fr 1fr 1fr;
+    grid-template-areas: 
+        "header header header header"
+        "nav expenses income sub-menu"
+        "nav charts charts sub-menu"
+    ;
+
+}
+
+/* HEADER */
+
+header {
     background-color: #ededed;
     width: 100%;
     height: 136px;
+    /* display: flex;
+    align-items: center; */
+    grid-area: header;
     display: flex;
+    justify-content: space-between;
+}
+
+/* MAIN NAVIGATION */
+
+nav {
+    grid-area: nav;
+    background-color: #ededed;
+    width: 120px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  
+    align-content: center;
     align-items: center;
 }
 
 
 
-.main-nav {
-    display: flex;
-    background-color: #ededed;
-    width: 80px;
-    height: 100%;
-    z-index: 1; 
+li {
+    padding-bottom: 42px;
 }
 
-.main-content {
-    padding-left: 120px;
+.nav-icon {
+    height: 62px;
+    width: auto;
+    /* margin-bottom: 12px; */
+}
+
+ul {
+    list-style: none;
+   
+}
+
+/* HOME PAGE SUB-MENU */
+
+.sub-menu {
+    grid-area: sub-menu;
+}
+
+.recent-expense {
+    grid-area: expenses;
+    padding: 12px;
+}
+
+.recent-income {
+    grid-area: income;
+    padding: 12px;
+}
+
+.charts {
+    grid-area: charts;
+    background-color: #ededed;
+    border-radius: 25px;
+    padding: 12px;
+}
+
+
+
+/* TRANSACTIONS */
+
+.transaction-listing {
+    width: 100%;
+    display: table;
+    table-layout: fixed;
+    border-radius: 25px;
+    /* padding: 1px; */
+    background-color: #ededed;
+}
+
+.tr {
+    display: table-row;
+}
+
+.show-transactions {
+    word-wrap: break-word;
+    padding: 5px 0;
+    padding: 6px 3px;
+    /* border: 1px solid green; */
+    display: table-cell;
+    width: 60px;
+}
+
+.transactions-btn {
+    position: absolute;
+    right: 0;
+    width: 50px;
+}
+
+#crud-btns{
+    width: 50px;
+    /* display: flex;
+    flex-direction: column; */
 }
 
 
 .welcome-btn {
-    /* margin: auto; */
+    /* margin: auto; 
     display: flex;
     flex-direction: column;
-    margin-top: 15px;
+    margin-top: 15px; */
 }
 
-button {
+/* FONT STYLING */ 
+h1, h2, p {
+    font-family: Helvetica, Arial;
+    color: #7c7c7c;
+}
+
+h1 {
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 28px;
+}
+
+h2 {
+    padding: 12px 0;
+}
+
+/*
+.main-btn {
     text-align: center !important;
     background-color: #32B2A7;
     border: none;
@@ -51,23 +164,14 @@ button {
    
 }
 
-button:hover {
+.main-btn:hover {
     background-color: #fff;
     border: 2px solid #32b2a7;
     color: #32B2A7;
 }
 
-h1, h2, p {
-    font-family: Helvetica, Arial;
-    color: #7c7c7c;
-}
 
-h1 {
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-size: 28px;
-}
-
+*/ 
 .transaction-form > input{
     border-radius: 25px;
     background-color: #EDEDED;
@@ -78,9 +182,12 @@ h1 {
     padding: 4px 4px;
     
 }
+/* 
 ::placeholder:focus{
-    /* color: red; */
+    color: red; 
 }
+
+*/
 
 .transaction-form > input[type=submit] {
     color:#fff; 
