Install Cypress, create testing branch, began testing, also further syling to application

--- a/src/components/assets/css/style.css
+++ b/src/components/assets/css/style.css
@@ -123,10 +123,10 @@ ul {
 
 
 .welcome-btn {
-    /* margin: auto; 
+    margin: auto; 
     display: flex;
     flex-direction: column;
-    margin-top: 15px; */
+    margin-top: 15px;
 }
 
 /* FONT STYLING */ 
@@ -145,7 +145,7 @@ h2 {
     padding: 12px 0;
 }
 
-/*
+
 .main-btn {
     text-align: center !important;
     background-color: #32B2A7;
@@ -161,6 +161,8 @@ h2 {
     text-align: center;
     font-size: 22px;
     margin-bottom: 12px;
+    text-decoration: none;
+    font-family: Helvetica, Arial;
    
 }
 
@@ -171,7 +173,7 @@ h2 {
 }
 
 
-*/ 
+
 .transaction-form > input{
     border-radius: 25px;
     background-color: #EDEDED;
@@ -212,6 +214,7 @@ input:focus {
     
 }
 
+/*
 .content-wrapper {
     display: grid;
     grid-template-columns: 3fr 1fr;
@@ -222,4 +225,4 @@ input:focus {
     border-radius: 25px;
     height: 400px;
 }
-
+*/
