--- a/src/components/assets/css/main.css
+++ b/src/components/assets/css/main.css
@@ -53,6 +53,7 @@
     background-position: bottom;
     background: cover;
     background-size: 120%;
+    width: 100%;
     /* margin-bottom: -300px; */
 }
 
@@ -61,6 +62,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
 
 .btn-wrap {
