--- a/src/components/assets/css/style.css
+++ b/src/components/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 .App {
-    display: grid !important;
+    display: grid;
     height: 100vh;
     grid-template-columns: .3fr 1fr 1fr .5fr;
     grid-template-rows: .5fr 1fr 1fr;
