--- a/src/components/assets/css/style.css
+++ b/src/components/assets/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-.App {
+/* .App {
     display: grid;
     height: 100vh;
     grid-template-columns: .3fr 1fr 1fr .5fr;
@@ -14,7 +14,7 @@
         "nav charts charts sub-menu"
     ;
 
-}
+} */
 
 /* HEADER */
 
@@ -146,7 +146,7 @@ h2 {
 }
 
 
-.main-btn {
+.welcome-btn {
     text-align: center !important;
     background-color: #32B2A7;
     border: none;
@@ -166,7 +166,7 @@ h2 {
    
 }
 
-.main-btn:hover {
+.welcome-btn:hover {
     background-color: #fff;
     border: 2px solid #32b2a7;
     color: #32B2A7;
