updated home css

--- a/src/components/assets/css/header.css
+++ b/src/components/assets/css/header.css
@@ -1,5 +1,5 @@
-.app-logo {
+/* .app-logo {
     width: 220px;
     height: auto;
-    margin-top: 5px !important;
-}
+    margin-top: 0px !important;
+} */
