--- a/src/components/assets/css/style.css
+++ b/src/components/assets/css/style.css
@@ -1,302 +1,149 @@
-* {
-    margin: 0;
-    padding: 0;
+h3, h4 {
+    margin-bottom: 0px !important;
 }
-
-.entrance {
-    display: grid !important;
-    grid-template-columns: 1fr 1fr !important;
-    grid-template-areas: 
-        "left right" !important;
-}
-
-.App {
-    font-family: Helvetica, Arial;
-    display: grid;
-    height: 100vh;
-    grid-template-columns: .3fr 1fr 1fr .5fr;
-    grid-template-rows: .5fr .5fr 1fr 1fr;
-    grid-template-areas: 
-        "header header header header"
-        "nav title title title"
-        "nav income expenses sub-menu"
-        "nav charts charts sub-menu"
-    ;
-}
-
-.title {
-    color: #32B2A7;
-}
-
-
-.welcome {
-    grid-area: title;
-}
-
-.welcome-msg {
-    padding-bottom: 0;
-}
-
-.link {
-    text-decoration: none;
-}
-
-/* HEADER */
 
 header {
-    background-color: #ededed;
-    width: 100%;
-    height: 136px;
-    /* display: flex;
-    align-items: center; */
-    grid-area: header;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    margin: 0px;
 }
 
-/* MAIN NAVIGATION */
-
-nav {
-    grid-area: nav;
-    background-color: #ededed;
-    width: 120px;
+#root {
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-  
-    align-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-rows: 12% 88%;
+    grid-template-columns: 7% 93%;
+    grid-template-areas:
+        "header header"
+        "nav body";
 }
 
-
-
-li {
-    padding-bottom: 42px;
+header {
+    grid-area: header;
+    display: grid;
+    grid-template-columns: 15% 10% 10% 10% 10% 45%;
+    grid-template-areas:
+        "logo manage-budget manage-category user-setting x budget-amount"
 }
 
-.nav-icon {
-    height: 62px;
-    width: auto;
-    /* margin-bottom: 12px; */
+#logo {
+    grid-area: logo;
+    align-self: center;
 }
 
-ul {
-    list-style: none;
-   
+#manage-budget {
+    grid-area: manage-budget;
+    align-self: center;
 }
 
-/* HOME PAGE SUB-MENU */
-
-.sub-menu {
-    grid-area: sub-menu;
-    color: #32B2A7;
+#manage-category {
+    grid-area: manage-category;
+    align-self: center;
 }
 
-.recent-expense {
-    padding: 12px;
-    background-color: #ededed;
-    border-radius: 25px;
-}
-
-.recent-expense-container {
-    grid-area: expenses;
-}
-
-.recent-income-container {
-    grid-area: income;
-}
-
-.grid-column {
-    padding-left: 12px;
-}
-
-.recent-income {
-    padding: 12px;
-    background-color: #ededed;
-    border-radius: 25px;
-}
-
-
-.charts {
-    grid-area: charts;
-}
-
-/* BAR CHART */
-.barChart {
-    background-color: #ededed;
-    border-radius: 25px;
-    padding: 12px;
-}
-
-/* TRANSACTIONS */
-
-.transaciton-list {
-    background-color: #ededed;
-    padding: 6px;
-    border-radius: 25px;
-}
-
-.transaction {
-    width: 100%;
-    display: table;
-    padding: 6px !important;
-    table-layout: fixed;
-}
-
-.tr {
-    display: table-row;
-}
-
-.show-transactions {
-    word-wrap: break-word;
-    /* border: 1px solid green; */
-    display: table-cell;
-    width: 60px;
-}
-
-.transactions-btn {
-    position: absolute;
-    right: 0;
-    width: 50px;
-}
-
-#crud-btns{
-    width: 50px;
-    /* display: flex;
-    flex-direction: column; */
-}
-
-
-.welcome-btn {
-    margin: auto; 
-    display: flex;
-    flex-direction: column;
-    margin-top: 15px;
-}
-
-/* FONT STYLING */ 
-.budget {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
+#user-setting {
+    grid-area: user-setting;
+    align-self: center;
+    padding-left: 25px;
 }
 
 #budget-amount {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    grid-area: budget-amount;
+    align-self: center;
+    padding-right: 30px
+}
+
+#amount {
     color: #32B2A7;
 }
 
-.transaction-type{
-    padding-left: 12px;
+nav {
+    grid-area: nav;
 }
 
-h1, h2, h3, h4,p {
-    font-family: Helvetica, Arial;
+body {
+    background-image: url(../images/city-bg.svg);
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+
+#home {
+    grid-area: body;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 7% 8% 33% 8% 44%;
+    grid-template-areas:
+        "welcome welcome"
+        "recent-transaction recent-transaction"
+        "income expense"
+        "overview overview"
+        "income-chart expense-chart";
+    align-items: center;
+}
+
+#home-welcome {
+    grid-area: welcome;
+}
+
+#home-recent-transaction {
+    grid-area: recent-transaction;
+}
+
+#home-income {
+    grid-area: income;
+    align-self: start;
+}
+
+#home-expense {
+    grid-area: expense;
+    align-self: start;
+}
+
+#home-overview {
+    grid-area: overview;
+}
+
+#home-income-barchart {
+    grid-area: income-chart;
+}
+
+#home-expense-barchart {
+    grid-area: expense-chart;
+}
+
+#transactions th {
+    text-align: left;
+    background-color: #32B2A7;
+    color: white;
+  }
+
+#transactions tr:nth-child(even) {
+     background-color: #f2f2f2;
+}
+
+#transactions tr:hover {
+    background-color: #98d8d3;
+}
+
+#transactions td, #transactions th {
+    border: 1px solid #ddd;
+    padding: 6px;
+}
+
+#transactions td {
     color: #7c7c7c;
 }
 
-h1 {
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-size: 28px;
+#transaction-category {
+    width:120px;
 }
 
-h2 {
-    padding: 12px 0;
+#transaction-description {
+    width:250px;
 }
 
-
-.main-btn {
-    text-align: center !important;
-    background-color: #32B2A7;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-    color: #fff;
-    height: 48px;
-    width: 220px;
-    line-height: 48px;
-    text-transform: uppercase;
-    border: 2px solid #32b2a7;
-    text-align: center;
-    font-size: 22px;
-    margin-bottom: 12px;
-    text-decoration: none;
-    font-family: Helvetica, Arial;
-   
+#transaction-amount {
+    width:120px;
 }
 
-.main-btn:hover {
-    background-color: #fff;
-    border: 2px solid #32b2a7;
-    color: #32B2A7;
+#transaction-action {
+    width:110px;
 }
-
-
-
-.transaction-form > input{
-    border-radius: 25px;
-    background-color: #EDEDED;
-    border: 3px solid #ededed;
-    height: 24px;
-    width: 180px;
-    margin: 10px 0 15px 0;
-    padding: 4px 4px;
-    
-}
-/* 
-::placeholder:focus{
-    color: red; 
-}
-
-*/
-
-.transaction-form > input[type=submit] {
-    color:#fff; 
-    background-color: #32B2A8;
-    border: 0px;
-    cursor: pointer;
-    border: 2px solid;
-    height: 34px;
-
-}
-
-#submit-btn:hover {
-    color:#0c9186; 
-    background-color: #fff;
-    border: 0px;
-    border: 2px solid #32B2A8;
-
-}
-input:focus {
-    border-radius: 25px;
-    border: 2px solid #32b2a7;
-    
-}
-
-#intro-link, #login-link {
-    text-decoration: none;
-    color: #32B2A8;
-    cursor: pointer;
-}
-
-#intro-link:hover, #login-link:hover {
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-/*
-.content-wrapper {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
-
-.display-transactions {
-    background-color: #ededed;
-    border-radius: 25px;
-    height: 400px;
-}
-*/
